# devkit

./: .gitignore  CHANGELOG.md  CHANGELOG_SEARCHABLE_MENU.md  Cargo.toml  DEPLOYMENT.md  DOGFOODING.md  EXTENSIONS.md  EXTRACTING.md  FINAL_SUMMARY.md  GITHUB_ACTIONS.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE-MIT  MIGRATION_PLAN.md  MODES.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  RELEASE_PROCESS.md  SMART_DEPS.md  STATUS.md  build.sh  install.sh
.claude/: rules.md
.dev/extensions/test/: config.toml  hello.sh  info.sh
.github/actions/setup-devkit/: QUICK_REFERENCE.md  README.md  action.yml
.github/workflows/: ci.yml  release.yml
crates/devkit-cli/: Cargo.toml
crates/devkit-cli/src/: main.rs
crates/devkit-compose/: Cargo.toml
crates/devkit-compose/src/: lib.rs
crates/devkit-core/: Cargo.toml
crates/devkit-core/src/: command.rs  config.rs  context.rs  detection.rs  discovery.rs  error.rs  extension.rs  extension_loader.rs  external_extension.rs  history.rs  init.rs  lib.rs  output.rs  update.rs  utils.rs  validation.rs
crates/devkit-core/src/discovery/: cargo_provider.rs  docker_provider.rs  history.rs  makefile_provider.rs  npm_provider.rs  script_provider.rs
crates/devkit-core/tests/: config_tests.rs  error_tests.rs  utils_tests.rs
crates/devkit-core/tests/fixtures/: invalid_config.toml  valid_config.toml
crates/devkit-tasks/: Cargo.toml
crates/devkit-tasks/src/: cmd_builder.rs  lib.rs  runner.rs  template.rs  watch.rs
docs/: ARCHITECTURE.md  CUSTOM_CLI.md  EXAMPLE_USAGE.md  GETTING_STARTED.md  IMPROVEMENTS_SUMMARY.md  INIT_COMMAND.md  MIGRATION_GUIDE.md  README.md  ROADMAP.md  index.html
docs/archive/: COMPLETION_CELEBRATION.md  EXTRACTING.md  EXTRACTION_GUIDE.md  FINAL_SUMMARY.md  INSTALLER_SUMMARY.md  SETUP_SUMMARY.md  STATUS.md
examples/: deps-example.md
examples/custom-cli/: Cargo.toml  README.md
examples/custom-cli/src/: main.rs
examples/github-actions/: README.md  basic-ci.yml  cross-platform.yml  docker-integration.yml  monorepo-ci.yml
extensions/devkit-ext-benchmark/: Cargo.toml
extensions/devkit-ext-benchmark/src/: lib.rs
extensions/devkit-ext-cache/: Cargo.toml
extensions/devkit-ext-cache/src/: lib.rs
extensions/devkit-ext-ci/: Cargo.toml
extensions/devkit-ext-ci/src/: lib.rs  status.rs  workflows.rs
extensions/devkit-ext-commands/: Cargo.toml
extensions/devkit-ext-commands.disabled/: Cargo.toml
extensions/devkit-ext-commands.disabled/src/: lib.rs
extensions/devkit-ext-commands/src/: lib.rs
extensions/devkit-ext-dashboard/: Cargo.toml
extensions/devkit-ext-dashboard/src/: lib.rs
extensions/devkit-ext-database/: Cargo.toml
extensions/devkit-ext-database/src/: lib.rs  migrations.rs  psql.rs  seed.rs
extensions/devkit-ext-deps/: Cargo.toml  README.md
extensions/devkit-ext-deps/src/: detection.rs  extension_impl.rs  install.rs  lib.rs
extensions/devkit-ext-docker/: Cargo.toml  README.md
extensions/devkit-ext-docker/src/: compose.rs  lib.rs  logs.rs  shell.rs
extensions/devkit-ext-ecs/: Cargo.toml
extensions/devkit-ext-ecs/src/: lib.rs
extensions/devkit-ext-env/: Cargo.toml
extensions/devkit-ext-env/src/: lib.rs
extensions/devkit-ext-git/: Cargo.toml
extensions/devkit-ext-git/src/: lib.rs  release.rs  status.rs  version.rs
extensions/devkit-ext-k8s/: Cargo.toml
extensions/devkit-ext-k8s/src/: lib.rs
extensions/devkit-ext-monitoring/: Cargo.toml
extensions/devkit-ext-monitoring/src/: lib.rs
extensions/devkit-ext-pulumi/: Cargo.toml
extensions/devkit-ext-pulumi/src/: lib.rs
extensions/devkit-ext-quality/: Cargo.toml
extensions/devkit-ext-quality/src/: check.rs  fmt.rs  lib.rs  lint.rs
extensions/devkit-ext-remote/: Cargo.toml
extensions/devkit-ext-remote/src/: lib.rs
extensions/devkit-ext-secrets/: Cargo.toml
extensions/devkit-ext-secrets/src/: lib.rs
extensions/devkit-ext-security/: Cargo.toml
extensions/devkit-ext-security/src/: lib.rs
extensions/devkit-ext-test/: Cargo.toml
extensions/devkit-ext-test/src/: coverage.rs  lib.rs  test.rs  watch.rs
extensions/devkit-ext-tunnel/: Cargo.toml
extensions/devkit-ext-tunnel/src/: lib.rs
extensions/devkit-ext-watch/: Cargo.toml
extensions/devkit-ext-watch/src/: lib.rs
extensions/templates/: README.md  example-config.toml  nodejs-script.js  python-script.py  shell-script.sh
templates/: config.toml  dev-kitchen-sink.sh  dev.sh  dev.toml.node  dev.toml.rust
templates/cli/: Cargo.toml  claude.md
