[workspace]
resolver = "2"
members = [
    "crates/devkit-core",
    "crates/devkit-tasks",
    "crates/devkit-cli",
    "extensions/devkit-ext-docker",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Crcn"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/crcn/devkit"

[workspace.dependencies]
# Common dependencies used across crates
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
dirs = "5.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
glob = "0.3"
which = "7.0"
dotenvy = "0.15"
fuzzy-matcher = "0.3"
indicatif = "0.18"
ctrlc = "3.4"

# Internal crates
devkit-core = { path = "crates/devkit-core", version = "0.1.0" }
devkit-compose = { path = "crates/devkit-compose", version = "0.1.0" }
devkit-tasks = { path = "crates/devkit-tasks", version = "0.1.0" }
