[workspace]
resolver = "2"
members = [
    "crates/devkit-core",
    "crates/devkit-tasks",
    "crates/devkit-cli",
    "extensions/devkit-ext-deps",
    "extensions/devkit-ext-docker",
    "extensions/devkit-ext-quality",
    "extensions/devkit-ext-test",
    "extensions/devkit-ext-ci",
    "extensions/devkit-ext-git",
    "extensions/devkit-ext-database",
    "extensions/devkit-ext-tunnel",
    "extensions/devkit-ext-benchmark",
    "extensions/devkit-ext-env",
    "extensions/devkit-ext-ecs",
    "extensions/devkit-ext-pulumi",
    "extensions/devkit-ext-cache",
    "extensions/devkit-ext-secrets",
    "extensions/devkit-ext-security",
    "extensions/devkit-ext-k8s",
    "extensions/devkit-ext-watch",
    "extensions/devkit-ext-monitoring",
    "extensions/devkit-ext-remote",
    "extensions/devkit-ext-dashboard",
    # "examples/custom-cli",  # TODO: Update after implementing missing docker functions
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Crcn"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/crcn/devkit"

[workspace.dependencies]
# Common dependencies used across crates
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
console = "0.15"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
dirs = "5.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
glob = "0.3"
which = "7.0"
dotenvy = "0.15"
fuzzy-matcher = "0.3"
indicatif = "0.18"
ctrlc = "3.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "2.10", features = ["json"] }
walkdir = "2.5"
humansize = "2.1"
notify = "7.0"
notify-rust = "4.11"
chrono = "0.4"
ratatui = "0.28"
crossterm = "0.28"

# Internal crates
devkit-core = { path = "crates/devkit-core", version = "0.1.0" }
devkit-compose = { path = "crates/devkit-compose", version = "0.1.0" }
devkit-tasks = { path = "crates/devkit-tasks", version = "0.1.0" }
