[package]
name = "devkit-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Kitchen sink CLI binary for devkit"

[[bin]]
name = "devkit"
path = "src/main.rs"

[features]
default = ["docker"]
docker = ["devkit-ext-docker"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
console.workspace = true
dialoguer.workspace = true
dotenvy.workspace = true
devkit-core.workspace = true
devkit-tasks.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true

# Extensions
devkit-ext-docker = { path = "../../extensions/devkit-ext-docker", optional = true }
