[package]
name = "devkit-ext-benchmark"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "benchmark extension for devkit"

[dependencies]
anyhow.workspace = true
console.workspace = true
devkit-core.workspace = true
devkit-tasks.workspace = true
