[package]
name = "devkit-ext-dashboard"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Visual TUI dashboard for devkit"

[dependencies]
anyhow.workspace = true
devkit-core.workspace = true
ratatui.workspace = true
crossterm.workspace = true
