[package]
name = "devkit-ext-docker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Docker compose operations for devkit"

[dependencies]
anyhow.workspace = true
console.workspace = true
devkit-core.workspace = true
devkit-tasks.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
