[package]
name = "devkit-ext-pulumi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "pulumi extension for devkit"

[dependencies]
anyhow.workspace = true
console.workspace = true
devkit-core.workspace = true
devkit-tasks.workspace = true
