[package]
name = "devkit-ext-quality"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Code quality tools for devkit"

[dependencies]
anyhow.workspace = true
devkit-core.workspace = true
devkit-tasks.workspace = true
