[package]
name = "devkit-ext-remote"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Remote development support for devkit"

[dependencies]
anyhow.workspace = true
devkit-core.workspace = true
serde.workspace = true
toml.workspace = true
