[package]
name = "devkit-ext-secrets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Secrets management extension for devkit"

[dependencies]
anyhow.workspace = true
devkit-core.workspace = true
serde.workspace = true
serde_json.workspace = true
